--- a/WebPages/TakePota2BTheIdol/stylesheet.css
+++ b/WebPages/TakePota2BTheIdol/stylesheet.css
@@ -2,19 +2,18 @@ body {
     width: 100%;
     margin: 0;
     background-color: #ffecf5;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', 'Hiragino Kaku Gothic Pro', 'Yu Gothic', sans-serif;
+    font-family: YakuHanJP, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Hiragino Kaku Gothic Pro', 'Yu Gothic', Meiryo, "Helvetica Neue", Arial, sans-serif;
 
 }
 
 
 .At_A_Glance_Contents {
-    width: 53.229%;
+    width: 100vh;
     margin: 0 auto;
 }
 
 .At_A_Glance_Title {
     z-index: 100;
-    position: absolute;
     color: white;
     font-family: ab-kirigirisu, sans-serif;
     font-size: 48px;
@@ -22,177 +21,79 @@ body {
     text-shadow: 0px 0px 15px rgba(0, 0, 0, 0.25);
 }
 
-.Tiles {
+.At_A_Glance_Tiles {
     z-index: 100;
-    position: absolute;
+    display: grid;
+    grid-template-columns: repeat(6, 145px);
+    grid-auto-rows: 145px;
+    column-gap: 28px;
+    row-gap: 28px;
 }
+
+
+/*タイル・中身アリ*/
+.Tile1 {
+    background: #F7F6F5;
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.25);
+    border-radius: 15px;
+}
+
+/*タイル・中身ナシ*/
+.Tile2, .Tile3, .Tile4, .Tile5, .Tile6, .Tile7 {
+    background: rgba(247, 246, 245, 0.5);
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.25);
+    backdrop-filter: blur(4px);
+    border-radius: 15px;
+}
+
 
 .Tile1 {
     z-index: 100;
-    margin-top: 110px;
-    position: absolute;
-    width: 674px;
-    height: 320px;
-
-    background: #F7F6F5;
-    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.25);
-    border-radius: 15px;
+    grid-column-start: 1;
+    grid-column-end: 5;
+    grid-row-start: 1;
+    grid-row-end: 3;
 }
-
-
-/*
 
 .Tile2 {
     z-index: 100;
-    margin-top: 110px;
-    margin-left: 708px;
-    position: absolute;
-    width: 320px;
-    height: 320px;
-
-    background: #F7F6F5;
-    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.25);
-    border-radius: 15px;
+    grid-column-start: 5;
+    grid-column-end: 7;
+    grid-row-start: 1;
+    grid-row-end: 3;
 }
 
 .Tile3 {
     z-index: 100;
-    margin-top: 464px;
-    position: absolute;
-    width: 320px;
-    height: 320px;
-
-    background: #F7F6F5;
-    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.25);
-    border-radius: 15px;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 3;
+    grid-row-end: 5;
 }
 
 .Tile4 {
     z-index: 100;
-    margin-top: 464px;
-    margin-left: 354px;
-    position: absolute;
-    width: 320px;
-    height: 320px;
-
-    background: #F7F6F5;
-    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.25);
-    border-radius: 15px;
+    grid-column-start: 3;
+    grid-column-end: 5;
+    grid-row-start: 3;
+    grid-row-end: 5;
 }
 
 
 .Tile5 {
     z-index: 100;
-    margin-top: 464px;
-    margin-left: 708px;
-    position: absolute;
-    width: 320px;
-    height: 145px;
-
-    background: #F7F6F5;
-    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.25);
-    border-radius: 15px;
-}
-
-*/
-
-
-.Tile2 {
-    z-index: 100;
-    margin-top: 110px;
-    margin-left: 708px;
-    position: absolute;
-    width: 320px;
-    height: 320px;
-
-    display: -webkit-flex;
-    display: flex;
-    -webkit-align-items: center; /* 縦方向中央揃え（Safari用） */
-    align-items: center; /* 縦方向中央揃え */
-    -webkit-justify-content: center; /* 横方向中央揃え（Safari用） */
-    justify-content: center; /* 横方向中央揃え */
-
-    background: rgba(247, 246, 245, 0.5);
-    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.25);
-    backdrop-filter: blur(4px);
-    border-radius: 15px;
-}
-
-.Tile3 {
-    z-index: 100;
-    margin-top: 464px;
-    position: absolute;
-    width: 320px;
-    height: 320px;
-    
-    display: -webkit-flex;
-    display: flex;
-    -webkit-align-items: center; /* 縦方向中央揃え（Safari用） */
-    align-items: center; /* 縦方向中央揃え */
-    -webkit-justify-content: center; /* 横方向中央揃え（Safari用） */
-    justify-content: center; /* 横方向中央揃え */
-    
-    background: rgba(247, 246, 245, 0.5);
-    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.25);
-    backdrop-filter: blur(4px);
-    border-radius: 15px;
-}
-
-.Tile4 {
-    z-index: 100;
-    margin-top: 464px;
-    margin-left: 354px;
-    position: absolute;
-    width: 320px;
-    height: 320px;
-    
-    display: -webkit-flex;
-    display: flex;
-    -webkit-align-items: center; /* 縦方向中央揃え（Safari用） */
-    align-items: center; /* 縦方向中央揃え */
-    -webkit-justify-content: center; /* 横方向中央揃え（Safari用） */
-    justify-content: center; /* 横方向中央揃え */
-    
-    background: rgba(247, 246, 245, 0.5);
-    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.25);
-    backdrop-filter: blur(4px);
-    border-radius: 15px;
-}
-
-
-.Tile5 {
-    z-index: 100;
-    margin-top: 464px;
-    margin-left: 708px;
-    position: absolute;
-    width: 320px;
-    height: 145px;
-
-    display: -webkit-flex;
-    display: flex;
-    -webkit-align-items: center; /* 縦方向中央揃え（Safari用） */
-    align-items: center; /* 縦方向中央揃え */
-    -webkit-justify-content: center; /* 横方向中央揃え（Safari用） */
-    justify-content: center; /* 横方向中央揃え */
-
-    background: rgba(247, 246, 245, 0.5);
-    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.25);
-    backdrop-filter: blur(4px);
-    border-radius: 15px;
+    grid-column-start: 5;
+    grid-column-end: 7;
+    grid-row-start: 3;
+    grid-row-end: 4;
 }
 
 .Tile6 {
     z-index: 100;
-    margin-top: 637px;
-    margin-left: 708px;
-    position: absolute;
-    width: 145px;
-    height: 145px;
-
-    background: rgba(247, 246, 245, 0.5);
-    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.25);
-    backdrop-filter: blur(4px);
-    border-radius: 15px;
+    grid-column-start: 5;
+    grid-column-end: 6;
+    grid-row-start: 4;
+    grid-row-end: 5;
 }
 
 .Tile_Twitter_Logo {
@@ -201,16 +102,10 @@ body {
 
 .Tile7 {
     z-index: 100;
-    margin-top: 637px;
-    margin-left: 881px;
-    position: absolute;
-    width: 145px;
-    height: 145px;
-    
-    background: rgba(247, 246, 245, 0.5);
-    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.25);
-    backdrop-filter: blur(4px);
-    border-radius: 15px;
+    grid-column-start: 6;
+    grid-column-end: 7;
+    grid-row-start: 4;
+    grid-row-end: 5;
 }
 
 .Tile_YouTube_Logo {
@@ -242,7 +137,7 @@ body {
 
 .Menu_Bar {
     height: max(14.352vh, 155px);
-    padding: 0 36px 0 36px;
+    margin: 0 36px 0 36px;
     font-family: inherit;
     text-shadow: 0px 0px 15px rgba(0, 0, 0, 0.25);
 }
@@ -251,7 +146,7 @@ body {
     font-family: ab-kirigirisu, sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: max(5.926vh, 64px);
+    font-size: 64px;
     color: #660000;
     height: 0px;
 }
@@ -262,4 +157,76 @@ body {
     font-style: normal;
     font-size: max(3.889vh, 42px);
     color: #660000;
+}
+
+
+/*PlayGround*/
+
+.PlayGround {
+    width: 100vh;
+    margin: 0 auto;
+}
+
+.GridTasting {
+    display: grid;
+    grid-template-columns: repeat(6, 145px);
+    grid-auto-rows: 145px;
+    column-gap: 28px;
+    row-gap: 28px;
+}
+
+.One, .Two, .Three, .Four, .Five, .Six, .Seven {
+    z-index: 101;
+    background: #F7F6F5;
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.25);
+    border-radius: 15px;
+}
+
+.One {
+    grid-column-start: 1;
+    grid-column-end: 5;
+    grid-row-start: 1;
+    grid-row-end: 3;
+}
+
+.Two {
+    grid-column-start: 5;
+    grid-column-end: 7;
+    grid-row-start: 1;
+    grid-row-end: 3;
+}
+
+.Three {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 3;
+    grid-row-end: 5;
+}
+
+.Four {
+    grid-column-start: 3;
+    grid-column-end: 5;
+    grid-row-start: 3;
+    grid-row-end: 5;
+}
+
+.Five {
+    grid-column-start: 5;
+    grid-column-end: 7;
+    grid-row-start: 3;
+    grid-row-end: 4;
+}
+
+.Six {
+    grid-column-start: 5;
+    grid-column-end: 6;
+    grid-row-start: 4;
+    grid-row-end: 5;
+}
+
+.Seven {
+    grid-column-start: 6;
+    grid-column-end: 7;
+    grid-row-start: 4;
+    grid-row-end: 5;
 }
