--- a/WebPages/TakePota2BTheIdol/stylesheet.css
+++ b/WebPages/TakePota2BTheIdol/stylesheet.css
@@ -5,8 +5,6 @@ body {
     font-family: YakuHanJP, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Hiragino Kaku Gothic Pro', 'Yu Gothic', Meiryo, "Helvetica Neue", Arial, sans-serif;
 }
 
-.At_A_Glance {}
-
 .At_A_Glance_Contents {
     position: absolute;
     width: 100vw;
@@ -26,6 +24,10 @@ body {
     letter-spacing: -0.1em;
     text-shadow: 0px 0px 15px rgba(0, 0, 0, 0.25);
     margin-bottom: 27px;
+}
+
+.At_A_Glance_Title h1 {
+    text-align: left;
 }
 
 .At_A_Glance_Tiles {
