--- a/WebPages/TakePota2BTheIdol/stylesheet.css
+++ b/WebPages/TakePota2BTheIdol/stylesheet.css
@@ -293,7 +293,7 @@ html::-webkit-scrollbar {
 }
 
 .Tile2-1 {
-    background: #F7F6F5;
+    background: linear-gradient(to top, rgba(255,255,255,0), #fff 60%), url(/Mates/Pics/file_2f65263f-acc1-4b90-91dc-0e435bfe1da1_blob.png);
     /*Grid指定*/
     grid-column-start: 1;
     grid-column-end: 3;
@@ -302,7 +302,7 @@ html::-webkit-scrollbar {
 }
 
 .Tile2-2 {
-    background: #F7F6F5;
+    background: linear-gradient(to top, rgba(255,255,255,0), #fff 60%), url(/Mates/Pics/file_2f65263f-acc1-4b90-91dc-0e435bfe1da1_blob.png);
     /*Grid指定*/
     grid-column-start: 3;
     grid-column-end: 5;
@@ -311,7 +311,7 @@ html::-webkit-scrollbar {
 }
 
 .Tile2-3 {
-    background: #F7F6F5;
+    background: linear-gradient(to top, rgba(255,255,255,0), #fff 60%), url(/Mates/Pics/file_2f65263f-acc1-4b90-91dc-0e435bfe1da1_blob.png);
     /*Grid指定*/
     grid-column-start: 5;
     grid-column-end: 7;
@@ -320,7 +320,7 @@ html::-webkit-scrollbar {
 }
 
 .Tile2-4 {
-    background: #F7F6F5;
+    background: linear-gradient(to top, rgba(255,255,255,0), #fff 60%), url(/Mates/Pics/file_2f65263f-acc1-4b90-91dc-0e435bfe1da1_blob.png);
     /*Grid指定*/
     grid-column-start: 1;
     grid-column-end: 3;
@@ -329,7 +329,7 @@ html::-webkit-scrollbar {
 }
 
 .Tile2-5 {
-    background: #F7F6F5;
+    background: linear-gradient(to top, rgba(255,255,255,0), #fff 60%), url(/Mates/Pics/file_2f65263f-acc1-4b90-91dc-0e435bfe1da1_blob.png);
     /*Grid指定*/
     grid-column-start: 3;
     grid-column-end: 5;
@@ -338,7 +338,7 @@ html::-webkit-scrollbar {
 }
 
 .Tile2-6 {
-    background: #F7F6F5;
+    background: linear-gradient(to top, rgba(255,255,255,0), #fff 60%), url(/Mates/Pics/file_2f65263f-acc1-4b90-91dc-0e435bfe1da1_blob.png);
     /*Grid指定*/
     grid-column-start: 5;
     grid-column-end: 7;
@@ -347,7 +347,7 @@ html::-webkit-scrollbar {
 }
 
 .Tile2-7 {
-    background: #F7F6F5;
+    background: linear-gradient(to top, rgba(255,255,255,0), #fff 60%), url(/Mates/Pics/file_2f65263f-acc1-4b90-91dc-0e435bfe1da1_blob.png);
     /*Grid指定*/
     grid-column-start: 1;
     grid-column-end: 3;
@@ -416,6 +416,6 @@ html::-webkit-scrollbar {
 }
 
 /*PlayGround*/
-/*background: linear-gradient(to bottom, transparent 0%, transparent 70%, #fff 100%), url(./images/bg.jpg);*/
+/*background: linear-gradient(to bottom, transparent 0%, transparent 70%, #fff 100%), url(/Mates/Pics/file_2f65263f-acc1-4b90-91dc-0e435bfe1da1_blob.png);*/
 
-/**/
+/*background: linear-gradient(to bottom, rgba(255,255,255,0), #fff 30%), url(/Mates/Pics/file_2f65263f-acc1-4b90-91dc-0e435bfe1da1_blob.png);*/
