--- a/WebPages/TakePota2BTheIdol/stylesheet.css
+++ b/WebPages/TakePota2BTheIdol/stylesheet.css
@@ -1,12 +1,12 @@
 @font-face {
-    font-family: 'IBM Plex Sans';
-    src: url('/Mates/Fonts/IBM_Plex_Sans/IBMPlexSans-Bold.ttf') format('truetype');
+    font-family: 'IBM_Plex_Sans';
+    src: url(/Mates/Fonts/IBM_Plex_Sans/IBMPlexSans-Bold.ttf) format('truetype');
     font-weight: bold;
 }
 
 @font-face {
-    font-family: 'IBM Plex Sans';
-    src: url('/Mates/Fonts/IBM_Plex_Sans/IBMPlexSans-Regular.ttf') format('truetype');
+    font-family: 'IBM_Plex_Sans';
+    src: url(/Mates/Fonts/IBM_Plex_Sans/IBMPlexSans-Regular.ttf) format('truetype');
     font-weight: normal;
 }
 
@@ -112,7 +112,8 @@ html::-webkit-scrollbar {
 .Tile2-7_Name h1 {
     margin: 39px 0 0 0;
     font-size: 36px;
-    font-family: 'IBM Plex Sans', sans-serif;
+    font-family: ab-kirigirisu, sans-serif;
+    font-weight: bold;
     letter-spacing: -0.2em;
 }
 
